# nokkvi

./: .gitignore  BUILD.md  CHANGELOG-0.3.md  CHANGELOG-0.4.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-LICENSES.md  build.rs  clippy.toml  config.toml.example  fix_gruvbox.py  install.sh  maintain.md  newfeatbugs.md  package.sh  prompt15_plan.md  rustfmt.toml
.agent/: audit-artwork-2026-05-11.md  audit-progress.md
.agent/plans/: appservice-batch-tidy.md  appservice-orchestrator-split.md  audio-engine-typestate-igs.md  cleanup-batch.md  itemkind-migration.md  loader-target-trait.md  loaders-and-chrome.md  message-architecture.md  pending-expand-dedup.md  phase-a-slotlist-message.md  queue-typestate-igs.md
.agent/rules/: audio-engine.md  backend-services.md  code-standards.md  gotchas.md  new-feature-checklist.md  project-context.md  settings-view.md  ui-views.md  visualizer.md  widgets.md
.agent/workflows/: build-test.md  commit.md  new-view.md  package.md  sync-rules.md
.claude/commands/: commit.md  package.md  sync-rules.md  unreleased.md
.claude/rules/: audio-engine.md  backend-services.md  code-standards.md  gotchas.md  settings-view.md  ui-views.md  visualizer.md  widgets.md
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs-changelog-sync.yml  release.yml
assets/: org.nokkvi.nokkvi.desktop
changelog-archive/: CHANGELOG-0.10.md  CHANGELOG-0.11.md  CHANGELOG-0.12.md  CHANGELOG-0.13.md  CHANGELOG-0.14.md  CHANGELOG-0.15.md  CHANGELOG-0.16.md  CHANGELOG-0.17.md  CHANGELOG-0.3.md  CHANGELOG-0.4.md  CHANGELOG-0.5.md  CHANGELOG-0.6.md  CHANGELOG-0.7.md  CHANGELOG-0.8.md  CHANGELOG-0.9.md
data/: Cargo.toml
data/examples/: rodio_tone_test.rs
data/proptest-regressions/types/: trawl.txt
data/src/: credentials.rs  lib.rs
data/src/audio/: buffer.rs  crossfade_liveness.rs  crossfade_policy.rs  decoder.rs  engine.rs  eq.rs  fade_curve.rs  format.rs  generation.rs  graph_probe.rs  mod.rs  music_bridge.rs  normalization.rs  pipewire_output.rs  range_http_reader.rs  renderer.rs  rodio_output.rs  sfx_engine.rs  spectrum.rs  streaming_source.rs  symphonia_registry.rs
data/src/backend/: albums.rs  app_service.rs  artists.rs  auth.rs  genres.rs  lazy_authed_service.rs  library_orchestrator.rs  mod.rs  playback_controller.rs  playlists.rs  queue.rs  queue_orchestrator.rs  settings.rs  songs.rs
data/src/services/: artwork_prefetch.rs  auth.rs  font_discovery.rs  lyrics_source.rs  mod.rs  navidrome_events.rs  playback.rs  radio_art_store.rs  settings.rs  state_storage.rs  storage_keys.rs  task_manager.rs  theme_loader.rs  toml_settings_io.rs
data/src/services/api/: albums.rs  artists.rs  client.rs  genres.rs  libraries.rs  lyrics.rs  mod.rs  pagination.rs  parse.rs  play_queue.rs  playlists.rs  radios.rs  rating.rs  similar.rs  songs.rs  sort.rs  star.rs  subsonic.rs  tags.rs
data/src/services/queue/: mod.rs  navigation.rs  order.rs  write_guard.rs
data/src/services/radio_scrobble/: lastfm.rs  listenbrainz.rs  mod.rs  parse.rs  source.rs
data/src/services/settings_tables/: columns.rs  general.rs  interface.rs  lock_watchpoint_test.rs  mod.rs  playback.rs  visualizer.rs
data/src/services/testdata/: persisted_default.golden.json  persisted_sentinel.golden.json
data/src/types/: accessors.rs  album.rs  artist.rs  batch.rs  collage_artwork.rs  error.rs  filter.rs  genre.rs  hotkey_config.rs  info_modal.rs  item_kind.rs  labeled_enum.rs  library.rs  library_search.rs  lyrics.rs  mod.rs  mode_toggle.rs  next_track_reset.rs  one_shot_shuffle.rs  paged_buffer.rs  player_settings.rs  player_settings_schema.rs  playlist.rs  playlist_edit.rs  progress.rs  queue.rs  queue_sort_mode.rs  radio_station.rs  reactive.rs  rules_session.rs  setting_def.rs  setting_item.rs  setting_value.rs  settings.rs  settings_data.rs  settings_side_effect.rs  smart_criteria.rs  song.rs  song_pool.rs  song_source.rs  (+11 more)
data/src/types/hotkey_config/: action.rs  config.rs  key_code.rs  key_combo.rs  mod.rs  tests.rs
data/src/types/player_settings/: appearance.rs  artwork.rs  library.rs  mod.rs  navigation.rs  playback.rs  slot_list.rs  strip.rs  verbose.rs  visualizer.rs
data/src/utils/: artwork_url.rs  cache.rs  calendar.rs  cycle.rs  dominant_color.rs  formatters.rs  fuzzy.rs  mod.rs  paths.rs  scale.rs  search.rs  server_url.rs  setting_keywords.rs  url_redaction.rs
docs/: ICED_ARCHITECTURE_PATTERNS.md  inspirations.md  replaygain-implementation-plan.md  rmpc_docs_pipeline.md  subpixel_crash_analysis.md
example_themes/: config_bio_luminal_swamplab.toml  config_catppuccin.toml  config_dracula.toml  config_everforest.toml  config_kanagawa.toml  config_nord.toml  cryo.toml  ember.toml  gruvbox_dark_hard_blue.toml  gruvbox_dark_hard_red.toml
nokkvi-ipc/: Cargo.toml
nokkvi-ipc/src/: client.rs  lib.rs  protocol.rs  server.rs  socket_path.rs
nokkvi-ipc/tests/: round_trip.rs
scripts/: README.md  build_toggle_util.sh  check-cavacore-update.sh  gen-logo-assets.sh  migrate_themes.py  rename_viewmodels.py  rename_wheel_to_slot_list.py  toggle_light_mode.py  toggle_light_mode_ipc.sh  toggle_light_mode_util  toggle_light_mode_util.rs  visualizer_showcase.py
src/: app_message.rs  app_view.rs  atomic_u8_enum.rs  config_writer.rs  embedded_svg.rs  main.rs  state.rs  test_helpers.rs  theme.rs  theme_config.rs  visualizer_config.rs
src/hotkeys/: global.rs  mod.rs
src/services/: collage_artwork.rs  ipc.rs  loop_subscription.rs  mod.rs  mpris.rs  mpris_art_writer.rs  navidrome_sse.rs  notifications.rs  queue_changed_subscription.rs  subscription_slot.rs  task_subscription.rs  tray.rs
themes/: adwaita.toml  bio_luminal_swamplab.toml  catppuccin.toml  catppuccin_frappe.toml  catppuccin_macchiato.toml  cryo.toml  dracula.toml  ember.toml  enthroned.toml  everforest.toml  ferra.toml  firmium.toml  gruvbox.toml  gruvbox_blue.toml  gruvbox_red.toml  iced.toml  kanagawa.toml  kanagawa_dragon.toml  moonfly.toml  nightfly.toml  nord.toml  oxocarbon.toml  solarized.toml  svalbard.toml  tokyo_night.toml  tokyo_night_storm.toml
(+251 files in other folders)
