[workspace]
members = [".", "data"]

[workspace.package]
repository = "https://github.com/f-o-o-g-s/nokkvi"
license = "GPL-3.0"

[workspace.lints.clippy]
# Code clarity
redundant_else = "warn"
manual_string_new = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
map_unwrap_or = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"

[package]
name = "nokkvi"
version = "0.3.0"
edition = "2024"
description = "A fast and beautiful Rust/Iced desktop client for Navidrome"
readme = "README.md"
keywords = ["navidrome", "audio", "music", "player"]
categories = ["multimedia::audio", "gui"]
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nokkvi-data = { path = "data" }
anyhow = "1.0.102"
bytemuck = { version = "1.25", features = ["derive"] }
# Pinned post-0.14.0: requires `Ellipsis` type support (added in PR #3254)
iced = { git = "https://github.com/iced-rs/iced.git", rev = "12a01265", features = ["tokio", "image", "svg", "advanced", "canvas", "wgpu", "sipper"] }
lru = "0.16"
image = "0.25.10"
reqwest = { version = "0.13.2", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "1.0", features = ["parse", "display"] }
toml_edit = "0.25"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.32"
mpris-server = "0.9"
notify = "8"
parking_lot = "0.12.5"
arc-swap = "1.7"

[dev-dependencies]
tempfile = "3.27.0"

