[workspace]
members = [".", "data"]

[workspace.package]
repository = "https://github.com/f-o-o-g-s/nokkvi"
license = "GPL-3.0-only"
rust-version = "1.89"

[workspace.lints.clippy]
# Code clarity
redundant_else = "warn"
manual_string_new = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
map_unwrap_or = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"

# Ship-blockers — codify the CLAUDE.md "no .unwrap() in production" /
# "use tracing, not println" rules. Tests opt out via #![cfg_attr(test, ...)]
# at each crate root; intentional CLI output uses targeted #[allow].
unwrap_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"
mem_forget = "deny"
todo = "deny"
unimplemented = "deny"

# Drift-prevention — every match over an enum must enumerate variants
# explicitly so adding a new variant becomes a compile error at every
# match site instead of being silently absorbed by `_ =>`.
match_wildcard_for_single_variants = "deny"

# Perf trap — `unwrap_or(expensive())` / `map_or(expensive(), ...)` evaluate
# the fallback eagerly even on the Some path. Force *_or_else so closures
# are only invoked when the Option is actually None.
or_fun_call = "deny"

# Cargo-cult async — `async fn` declarations whose body never `.await`s
# are zero-value ceremony that callers pay for in needless `.await` noise
# (and the AI-failure-mode this lint targets: marking helpers async without
# needing to). Every async fn must justify itself with at least one .await.
unused_async = "deny"

[package]
name = "nokkvi"
version = "0.3.17"
edition = "2024"
description = "A fast and beautiful Rust/Iced desktop client for Navidrome"
readme = "README.md"
keywords = ["navidrome", "audio", "music", "player"]
categories = ["multimedia::audio", "gui"]
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
nokkvi-data = { path = "data" }
anyhow = "1.0.102"
bytemuck = { version = "1.25", features = ["derive"] }
# Pinned to f-o-o-g-s/iced fork at PR #3292 (return→continue fix in wgpu image
# State::prepare). Base is upstream 12a01265 (post-0.14.0 for Ellipsis #3254).
# Drop fork and return to iced-rs/iced when #3292 lands upstream.
iced = { git = "https://github.com/f-o-o-g-s/iced.git", rev = "8d69450c", features = ["tokio", "image", "svg", "advanced", "canvas", "wgpu", "sipper"] }
lru = "0.16"
image = "0.25.10"
reqwest = { version = "0.13.2", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "1.0", features = ["parse", "display"] }
toml_edit = "0.25"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.32"
mpris-server = "0.9"
ksni = "0.3"
notify = "8"
parking_lot = "0.12.5"
arc-swap = "1.7"
libc = "0.2"


