[package]
name = "nokkvi-data"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25", features = ["derive"] }
chrono = "0.4.44"
directories = "6.0.0"
image = "0.25.10"
md5 = "0.8.0"
rand = "0.10"
reqwest = { version = "0.13.2", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = { version = "1.0", features = ["parse", "display"] }
toml_edit = "0.25"
symphonia = { version = "0.5.5", features = ["mp3", "flac", "ogg", "wav", "aac", "isomp4", "alac", "aiff"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1.44"
url = "2.5.8"
futures = "0.3.32"
rodio = { git = "https://github.com/RustAudio/rodio.git", rev = "7e9ba6dd", default-features = false, features = ["playback", "tracing"] }
ringbuf = "0.4"
rustfft = "6"
redb = "3.1.1"
httpdate = "1.0.3"
filetime = "0.2.27"
font-kit = "0.14"
parking_lot = "0.12.5"
bincode-next = { version = "2.1", features = ["serde"] }
lru = "0.16"
thiserror = "2"
num-complex = "0.4"
biquad = "0.4.1"
[target.'cfg(target_os = "linux")'.dependencies]
pipewire = { version = "0.9.2", features = ["v0_3_77"] }
