[package]
name = "nokkvi-data"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25", features = ["derive"] }
chrono = "0.4.44"
directories = "6.0.0"
rand = "0.10"
reqwest = { version = "0.13.2", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = { version = "1.0", features = ["parse", "display"] }
toml_edit = "0.25"
# Before bumping: the Symphonia#516 canary test in `audio::symphonia_registry`
# (Xing tag rejected on CRC-protected MP3s) fails when a new version fixes the
# bug upstream — see its doc comment for the workaround-retirement checklist.
symphonia = { version = "0.5.5", features = ["mp3", "flac", "ogg", "wav", "aac", "isomp4", "alac", "aiff"] }
# Opus decoder adapter for Symphonia. Workaround for pdeljanov/Symphonia#8 —
# Symphonia ships no native Opus codec (open since 2020, no ETA). Drop this
# dep and add `"opus"` to the symphonia features list above the day upstream
# lands native Opus support, then delete `audio::symphonia_registry` and route
# decoder lookups back through `symphonia::default::get_codecs()`.
# Pin matrix: 0.2.x is symphonia 0.5; 0.3.x is symphonia 0.6 — bump in lockstep
# whenever we move the symphonia pin. Default `bundled` feature vendors libopus
# via opusic-sys so users need no runtime system package.
symphonia-adapter-libopus = "0.2.9"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1.44"
url = "2.5.8"
futures = "0.3.32"
# Pinned to a rodio git rev ~21 commits past the v0.22.2 release for its
# unreleased realtime-path fixes (span-boundary parameter-change detection,
# frame-aligned Source contract, mixer channel alignment) on the Source/mixer
# path the crossfade/gapless engine uses — crates.io 0.22.2 compiles + passes
# tests but lacks them, risking a silent regression. NOT for cpal's PipeWire host
# (native output is the `pipewire` crate; rodio/cpal is the ALSA fallback).
# Un-pin to the first rodio release (>=0.23) that contains these fixes.
rodio = { git = "https://github.com/RustAudio/rodio.git", rev = "7e9ba6dd", default-features = false, features = ["playback", "tracing"] }
ringbuf = "0.5"
rustfft = "6"
redb = "4.1.0"
font-kit = "0.14"
parking_lot = "0.12.5"
bincode-next = { version = "2.1", features = ["serde"] }
thiserror = "2"
num-complex = "0.4"
icy-metadata = "0.6.0"
biquad = "0.6"
[target.'cfg(target_os = "linux")'.dependencies]
pipewire = { version = "0.10.0", features = ["v0_3_77"] }

[dev-dependencies]
tempfile = "3"
proptest = "1.11"
