[package]
name = "nokkvi-ipc"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# Structural invariant per nokkvi-new-feats.md §14C: this crate is
# iced-free. Do not add an iced dependency — it would break the
# fork-before-iced startup-latency contract for the CLI client path.

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
interprocess = { version = "2.4.2", features = ["tokio"] }
tokio = { version = "1.50.0", features = ["net", "io-util", "macros", "rt", "sync", "fs"] }
futures = "0.3.32"
thiserror = "2"
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.50.0", features = ["net", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
